Also import sun.reflect.* and sun.invoke.*